--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script type="text/javascript" src="dist/js/sams.js"></script>
   </head>
   <body ng-controller="MainController">
+    <div id="loading">
+      <div class="spinner"></div>
+    </div>
 
     <div class="container-fluid">
 
@@ -24,5 +27,10 @@
       <div class="col-xs-12" ui-view></div>
       <!-- /content -->
     </div>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('#loading').hide();
+      });
+    </script>
   </body>
 </html>
