Add 1 second, for improve the appreciating of spinner :)

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
       <!-- /content -->
     </div>
     <script type="text/javascript">
-      $(document).ready(function(){
-        $('#loading').hide();
+      jQuery(function(){
+        setTimeout(function(){
+          $('#loading').hide();
+        }, 1000);
       });
     </script>
   </body>
