added slideup effect to spinner

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <script type="text/javascript">
       jQuery(function(){
         setTimeout(function(){
-          $('#loading').hide();
+          $('#loading').slideUp();
         }, 1000);
       });
     </script>
