--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="dist/js/deps.js"></script>
     <script type="text/javascript" src="dist/js/sams.js"></script>
   </head>
-  <body ng-controller="MainController" ng-init="init()">
+  <body ng-controller="MainController" ng-init="initMain()">
     <div id="loading">
       <div class="spinner"></div>
     </div>
