Added print user solution

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="container-fluid">
 
-      <div class="col-xs-12" ng-hide="is('home')">
+      <div class="col-xs-12 no-printable" ng-hide="is('home')">
         <a id="button-home" class="pull-left" ui-sref="home">
           <span class="glyphicon glyphicon-home icon"></span>
         </a>
