--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="sams">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=1024, maximum-scale=1, user-scalable=no">
     <title>Sams</title>
     <link rel="stylesheet" href="dist/css/deps.css" />
     <link rel="stylesheet" href="dist/css/sams.css" />
