--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
       <div class="col-xs-12" ui-view></div>
       <!-- /content -->
     </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-40567124-5', 'auto');
+      ga('send', 'pageview');
+    </script>
     <script type="text/javascript">
       jQuery(function(){
         setTimeout(function(){
